--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <body>
     <h2>Module5: PHP Web Development - Week 2</h2>
     <ul>
-      <li><a href="/1directory/">Function and File Organization</a></li>
-      <li><a href="/2oo/webroot/">OOP Overview</a></li>
-      <li><a href="/3crud/webroot/user.php">ORM / MVC</a></li>
+      <li><a href="1directory/">Function and File Organization</a></li>
+      <li><a href="2oo/webroot/">OOP Overview</a></li>
+      <li><a href="3crud/webroot/user.php">ORM / MVC</a></li>
     </ul> 
   </body>
 </html>
